# mcp-discord

./: Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
src/discord_mcp/: __init__.py  advanced_discord_features.py  advanced_tool_handlers.py  core_tool_handlers.py  integrated_server.py  integration_complete.py  server.py  server_setup_templates.py  utils.py  utils_module.py
tests/: test_server_config.py  test_server_utils.py
