# Updated pyproject.toml dependencies section
[project]
name = "mcp-discord-manager"
version = "0.1.0"
description = "Discord integration for Model Context Protocol"
authors = [
    {name = "wowjinxy", email = "drake1749@gmail.com"},
]
dependencies = [
    "discord.py>=2.4.0",  # Updated for AutoMod support
    "mcp>=0.1.0",
    "aiohttp>=3.8.0",     # For webhook functionality
    "python-dateutil>=2.8.0",  # For better date parsing
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/hanweg/mcp-discord"
Repository = "https://github.com/hanweg/mcp-discord.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discord_mcp"]

[project.scripts]
mcp-discord = "discord_mcp:main"