[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "Discord integration for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "wowjinxy", email = "drake1749@gmail.com" },
]
dependencies = [
    "aiohttp>=3.8.0",
    "discord.py>=2.4.0",
    "mcp>=1.13.0",
    "python-dateutil>=2.8.0",
    "smithery>=0.1.23",
]

[project.urls]
Homepage = "https://github.com/hanweg/mcp-discord"
Repository = "https://github.com/hanweg/mcp-discord.git"

[project.scripts]
discord-mcp = "discord_mcp:main"
mcp-discord = "discord_mcp:main"
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "discord_mcp.server:create_server"
